# ptrnet-jax

./: README.md  algorithm.py  pyproject.toml
examples/: notebook.ipynb
src/ptrnet/: ac.py  algorithm.py  network.py
